--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,14 @@
             android:name=".Controller.MainActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".Controller.register"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Controller.AddRevenueActivity"
+            android:exported="true">
+        </activity>
 
     </application>
 
